fix: account list alignment

--- a/packages/vue/src/styles/_responsive.scss
+++ b/packages/vue/src/styles/_responsive.scss
@@ -1,223 +1,217 @@
-
 html {
-  font-size: 12px;
-  .app {
-    display:flex;
-  }
+	font-size: 12px;
+	.app {
+		display: flex;
+	}
 }
 .sp-token-send__holder {
-  flex-direction: column;
-  .sp-token-send {
-    padding-right:0;
-  }
+	flex-direction: column;
+	.sp-token-send {
+		padding-right: 0;
+	}
 }
 .sp-sidebar {
-  position:fixed;
-  z-index:1000;
-  width:0;
-  padding-left:0rem;
-  padding-right:0rem;
-  padding-top:9rem;
-  padding-bottom:4rem;
-  .sp-hamburger {
-    position: fixed;
-    font-size: 2rem;
-    left: 2rem;
-    top: 2.5rem;
-    width: 5rem;
-    height: 5rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: white;
-    border-radius: 2.5rem;
-    cursor:pointer;
-  }
-  .sp-sidebar__header {
-    width: 0rem;
-    overflow: hidden;
-    white-space: nowrap;
-  }
-  .sp-sidebar__content {
-    width: 0rem;
-    overflow: hidden;
-    white-space: nowrap;
-  }
+	position: fixed;
+	z-index: 1000;
+	width: 0;
+	padding-left: 0rem;
+	padding-right: 0rem;
+	padding-top: 9rem;
+	padding-bottom: 4rem;
+	.sp-hamburger {
+		position: fixed;
+		font-size: 2rem;
+		left: 2rem;
+		top: 2.5rem;
+		width: 5rem;
+		height: 5rem;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		background: white;
+		border-radius: 2.5rem;
+		cursor: pointer;
+	}
+	.sp-sidebar__header {
+		width: 0rem;
+		overflow: hidden;
+		white-space: nowrap;
+	}
+	.sp-sidebar__content {
+		width: 0rem;
+		overflow: hidden;
+		white-space: nowrap;
+	}
 
-  .sp-sidebar__footer {
-    width: 0rem;
-    overflow: hidden;
-    white-space: nowrap;
+	.sp-sidebar__footer {
+		width: 0rem;
+		overflow: hidden;
+		white-space: nowrap;
 
-    .sp-status-api,
-    .sp-status-rpc,
-    .sp-status-ws {
-      margin-bottom: 1rem;
-    }
+		.sp-status-api,
+		.sp-status-rpc,
+		.sp-status-ws {
+			margin-bottom: 1rem;
+		}
 
-  }
-  .sp-link-icon {
-    .sp-link-icon-wrapper{
-      .sp-link-icon__icon {
-        font-size:2.4rem
-      }
-      .sp-link-icon__text {
-        font-size:2rem;
-      }
-    }
-  }
-  &.sp-mob-opened {
-    width: 85vw;
-    box-shadow: 0rem 0.8rem 1.6rem -0.3rem rgba(140, 148, 159, 0.15);
-    padding-left: 6rem;
-    padding-right:6rem;
-    .sp-hamburger {
-      left: calc(85vw - 7rem);
-    }
-    .sp-sidebar__header {
-      width: 100%;
-    }
-    .sp-sidebar__content {
-      width: 100%;
-    }
-    .sp-sidebar__footer {
-      width: 100%;
-      display: flex;
-      flex-direction: column;
-      /* justify-content: center; */
-      align-items: center;
-      .sp-text {
-        margin-top: 0;
-        opacity: 1;
-        display: none !important;
-      }
-    }
-  }
+		.sp-text {
+			margin-top: 0;
+			opacity: 1;
+			display: none !important;
+		}
+	}
+	.sp-link-icon {
+		.sp-link-icon-wrapper {
+			.sp-link-icon__icon {
+				font-size: 2.4rem;
+				width: 3rem;
+			}
+			.sp-link-icon__text {
+				font-size: 2rem;
+			}
+		}
+	}
+	&.sp-mob-opened {
+		width: 85vw;
+		box-shadow: 0rem 0.8rem 1.6rem -0.3rem rgba(140, 148, 159, 0.15);
+		padding-left: 6rem;
+		padding-right: 6rem;
+		.sp-hamburger {
+			left: calc(85vw - 7rem);
+		}
+		.sp-sidebar__header {
+			width: 100%;
+		}
+		.sp-sidebar__content {
+			width: 100%;
+		}
+		.sp-sidebar__footer {
+			width: 100%;
+			display: flex;
+			flex-direction: column;
+			/* justify-content: center; */
+			align-items: center;
+		}
+	}
 }
 @media only screen and (min-width: 576px) {
-
 }
 
 @media only screen and (min-width: 768px) {
+	html {
+		font-size: 9px;
+		.app {
+			display: flex;
+		}
+	}
+	.sp-sidebar {
+		position: relative;
+		width: 3.6rem;
+		padding-left: 4rem;
+		padding-right: 4rem;
+		padding-top: 4rem;
+		z-index: auto;
 
-  html {
-    font-size: 9px;
-    .app {
-      display:flex;
-    }
-  }
-  .sp-sidebar {
-    position:relative;
-    width:3.6rem;
-    padding-left:4rem;
-    padding-right:4rem;
-    padding-top:4rem;
-    z-index:auto;
+		.sp-link-icon {
+			.sp-link-icon-wrapper {
+				.sp-link-icon__icon {
+					font-size: 1.6rem;
+					width: 2rem;
+				}
+				.sp-link-icon__text {
+					font-size: 1.4rem;
+				}
+			}
+		}
+		.sp-hamburger {
+			display: none;
+		}
 
-    .sp-link-icon {
-      .sp-link-icon-wrapper{
-        .sp-link-icon__icon {
-          font-size:1.6rem
-        }
-        .sp-link-icon__text {
-          font-size:1.4rem;
-        }
-      }
-    }
-    .sp-hamburger {
-      display:none;
-    }
+		.sp-sidebar__header {
+			width: 2rem;
+			transition: width 0.4s;
+		}
+		.sp-sidebar__content {
+			width: 2rem;
+			transition: width 0.4s;
+		}
 
+		.sp-sidebar__footer {
+			width: 2rem;
+			transition: width 0.4s;
 
-  .sp-sidebar__header {
-    width: 2rem;
-    transition: width 0.4s;
-  }
-  .sp-sidebar__content {
-    width: 2rem;
-    transition: width 0.4s;
-  }
-
-  .sp-sidebar__footer {
-    width: 2rem;
-    transition: width 0.4s;
-
-    .sp-status-api,
-    .sp-status-rpc,
-    .sp-status-ws {
-      margin-bottom: 1rem;
-    }
-
-  }
-    &.sp-opened {
-      width: 22rem;
-      box-shadow:none;
-      .sp-sidebar__header {
-        width: 18rem;
-      }
-      .sp-sidebar__content {
-        width: 18rem;
-      }
-      .sp-sidebar__footer {
-        width: 18rem;
-        display:block;
-      }
-    }
-  }
+			.sp-status-api,
+			.sp-status-rpc,
+			.sp-status-ws {
+				margin-bottom: 1rem;
+			}
+		}
+		&.sp-opened {
+			width: 22rem;
+			box-shadow: none;
+			.sp-sidebar__header {
+				width: 18rem;
+			}
+			.sp-sidebar__content {
+				width: 18rem;
+			}
+			.sp-sidebar__footer {
+				width: 18rem;
+				display: block;
+			}
+		}
+	}
 }
 @media only screen and (min-width: 1024px) {
+	html {
+		font-size: 10px;
+		.app {
+			display: flex;
+		}
+	}
+	.sp-sidebar {
+		&.sp-opened {
+			width: 30rem;
 
-  html {
-    font-size: 10px;
-    .app {
-      display:flex;
-    }
-  }
-  .sp-sidebar {
-    &.sp-opened {
-      width: 30rem;
-
-      .sp-sidebar__header {
-        width: 22rem;
-      }
-      .sp-sidebar__content {
-        width: 22rem;
-      }
-      .sp-sidebar__footer {
-        width: 22rem;
-      }
-    }
-  }
+			.sp-sidebar__header {
+				width: 22rem;
+			}
+			.sp-sidebar__content {
+				width: 22rem;
+			}
+			.sp-sidebar__footer {
+				width: 22rem;
+			}
+		}
+	}
 }
 
 @media only screen and (min-width: 1366px) {
+	html {
+		font-size: 10px;
+		.app {
+			display: flex;
+		}
+	}
+	.sp-token-send__holder {
+		flex-direction: row;
 
-  html {
-    font-size: 10px;
-    .app {
-      display:flex;
-    }
-  }
-  .sp-token-send__holder {
-    flex-direction: row;
-
-    .sp-assets__wrapper {
-      flex-basis: 38%;
-      width: 38%;
-    }
-    .sp-token-send {
-      flex-basis: 62%;
-      width: 62%;
-      padding-right: clamp(1rem,2vw,3.2rem);
-    }
-  }
+		.sp-assets__wrapper {
+			flex-basis: 38%;
+			width: 38%;
+		}
+		.sp-token-send {
+			flex-basis: 62%;
+			width: 62%;
+			padding-right: clamp(1rem, 2vw, 3.2rem);
+		}
+	}
 }
 @media only screen and (min-width: 1680px) {
-
-  html {
-    font-size: 12px;
-    .app {
-      display:flex;
-    }
-  } 
+	html {
+		font-size: 12px;
+		.app {
+			display: flex;
+		}
+	}
 }
